<resources>
    <string name="default_notification_events">HI###PM###DC###</string>
    <string name="all_notification_events">HI###PM###CN###SN###DC###</string>
    <string name="pref_use_ssl">use_ssl</string>
    <string name="pref_nick_pref_1">nick1</string>
    <string name="pref_nick_pref_2">nick2</string>
    <string name="pref_nick_pref_3">nick3</string>
    <string name="pref_username">username</string>
    <string name="pref_real_name">real_name</string>
    <string name="pref_default_encoding">default_encoding</string>
    <string name="pref_timeout">timeout</string>
    <string name="pref_part_msg">default_part_message</string>
    <string name="pref_quit_msg">default_quit_message</string>
    <string name="pref_rejoin_on_kick">join_on_kick</string>
    <string name="pref_reconnect_automatically">reconnect_automatically</string>
    <string name="pref_typed_scrollback">pref_scrollback_length</string>
    <string name="pref_skip_motd">pref_skip_motd</string>
    <string name="pref_show_notif">pref_show_notif</string>
    <string name="pref_show_timestamps">show_timestamps</string>
    <string name="pref_notif_play_sound">play_sound</string>
    <string name="pref_notif_vibrate">notif_vibrate</string>
    <string name="pref_hide_some_messages">hide_some_messages</string>
    <string name="pref_extra_hilight">extra_hilight</string>
    <string name="pref_auto_cap_correct">auto_cap_correct</string>
    <string name="pref_detect_connection_changes">detect_connection_changes</string>
    <string name="pref_notif_sound">notif_sound</string>
    <string name="pref_reconnect_limit">reconnect_limit</string>
    <string name="pref_enable_chat_logs">enable_chat_logs</string>
    <string name="pref_separate_logs_by">separate_logs_by</string>
    <string name="pref_notif_sound_for">notif_sound_for</string>
    <string name="pref_notif_vibrate_for">notif_vibrate_for</string>
    <string name="pref_notif_for">notif_for</string>
    <string name="pref_volume_key_mode">volume_key_mode</string>
    <string name="pref_apply_to_all">apply_to_all</string>
    <string name="pref_gallery_visible">gallery_visible</string>
    <string name="pref_send_button_visible">send_button_visible</string>
    <string name="pref_keep_screen_on">keep_screen_on</string>
    <string name="menu_desc_add_server">Add Server</string>
    <string name="menu_desc_settings">Settings</string>
    <string name="menu_desc_filter">Filter</string>
    <string name="menu_desc_help">Help</string>
    <string name="menu_desc_exit">Exit</string>
    <string name="menu_desc_stop_reconnecting">Stop Reconnecting</string>
    <string name="menu_desc_connect">Connect</string>
    <string name="menu_desc_userlist">Userlist</string>
    <string name="user_management_op">Op</string>
    <string name="user_management_voice">Voice</string>
    <string name="user_management_kick">Kick</string>
    <string name="user_management_deop">Deop</string>
    <string name="user_management_devoice">Devoice</string>
    <string name="user_management_ban">Ban</string>
    <string name="user_management_hop">Hop</string>
    <string name="user_management_dehop">Dehop</string>
    <string name="user_management_kick_ban">Kick &amp; Ban</string>
    <string name="user_management_more">More</string>
    <string name="user_action_ignore">Ignore</string>
    <string name="user_action_add">Add</string>
    <string name="user_action_msg">Message</string>
    <string name="user_action_whois">Whois</string>
    <string name="menu_desc_ignorelist">Ignore List</string>
    <string name="menu_desc_copy_text">Copy Text</string>
    <string name="pref_title_chat_logging">Chat logging</string>
    <string name="pref_title_chat_logs_separator">Chat log separator</string>
    <string name="pref_title_chat_logs_info">Logs information</string>
    <string name="pref_title_conn_timeout">Connection timeout</string>
    <string name="pref_title_detect_conn_changes">Detect connection changes</string>
    <string name="pref_title_auto_reconnect">Automatically reconnect</string>
    <string name="pref_title_reconnect_limit">Reconnect attempt limit</string>
    <string name="pref_title_customize_text">Text Size &amp; Font</string>
    <string name="pref_title_vol_key">Volume Key Control</string>
    <string name="pref_title_show_timestamps">Show timestamps</string>
    <string name="pref_title_skip_motd">Skip MOTD</string>
    <string name="pref_title_default_part_msg">Default part message</string>
    <string name="pref_title_default_quit_msg">Default quit message</string>
    <string name="pref_title_rejoin_kick">Rejoin channel on kick</string>
    <string name="pref_title_hide_some_msgs">Hide join/part/quit messages</string>
    <string name="pref_title_auto_cap_correct">Capitalization &amp; correction</string>
    <string name="pref_title_use_notifications">Notifications</string>
    <string name="pref_title_extra_hilight">Extra words to highlight</string>
    <string name="pref_title_filter_notifications">Notification events</string>
    <string name="pref_title_notif_sound">Notification sound</string>
    <string name="pref_title_sound_events">Events with sound</string>
    <string name="pref_title_sound_tone">Notification ringtone</string>
    <string name="pref_title_notif_vibrate">Notification vibration</string>
    <string name="pref_title_vibrate_events">Events with vibration</string>
    <string name="pref_title_preferred_nick_1">1st choice</string>
    <string name="pref_title_preferred_nick_2">2nd choice</string>
    <string name="pref_title_preferred_nick_3">3rd choice</string>
    <string name="pref_title_preferred_username">Preferred username</string>
    <string name="pref_title_preferred_realname">Preferred realname</string>
    <string name="pref_title_preferred_ssl">SSL</string>
    <string name="pref_title_apply_preferred">Apply preferred to profiles</string>
    <string name="pref_title_input_history_limit">Input history limit</string>
    <string name="pref_title_gallery_visible">Show chat screen tabs</string>
    <string name="pref_title_send_button_visible">"Hide 'Send' button"</string>
    <string name="pref_title_keep_screen_on">Keep screen on</string>
    <string name="pref_summary_show_timestamps">Prefixes messages with timestamps</string>
    <string name="pref_summary_skip_motd">Skips the Message of the Day on connect</string>
    <string name="pref_summary_default_part_msg">Reason for when leaving channel</string>
    <string name="pref_summary_default_quit_msg">Reason for when leaving server</string>
    <string name="pref_summary_rejoin_kick">Rejoin after a 5 second delay</string>
    <string name="pref_summary_hide_some_msgs">Hides these messages from being shown</string>
    <string name="pref_summary_auto_cap_correct">Automatically capitalizes and corrects text</string>
    <string name="pref_summary_vol_key">Action for volume key press</string>
    <string name="pref_summary_extra_hilight">Separate words with commas</string>
    <string name="pref_summary_filter_notifications">Adjust events to notify for</string>
    <string name="pref_summary_notif_sound">Plays a sound for notifications</string>
    <string name="pref_summary_sound_events">Notification events to play sound for</string>
    <string name="pref_summary_sound_tone">Sound to play for notifications</string>
    <string name="pref_summary_notif_vibrate">Vibrates for notifications</string>
    <string name="pref_summary_vibrate_events">Notification events to vibrate for</string>
    <string name="pref_summary_chat_logs_off">Chat logging is disabled</string>
    <string name="pref_summary_chat_logs_on">Chat logging is enabled</string>
    <string name="pref_summary_chat_log_separator">Describes now new logs are separated</string>
    <string name="pref_summary_logs_info">Information about saved chat logs</string>
    <string name="pref_summary_conn_timeout">Number of seconds to attempt a connection</string>
    <string name="pref_summary_detect_conn_changes">Reconnect when connectivity changes</string>
    <string name="pref_summary_auto_reconnect">Reconnect when disconnected unexpectedly</string>
    <string name="pref_summary_reconnect_limit">Maximum number of connection attempts to make</string>
    <string name="pref_summary_preferred_nick_2">Used if 1st choice is unavailable</string>
    <string name="pref_summary_preferred_nick_3">Used if 2nd choice is unavailable</string>
    <string name="pref_summary_preferred_ssl">Enable SSL by default</string>
    <string name="pref_summary_preferred_encoding">Text encoding on servers</string>
    <string name="pref_summary_apply_preferred">Confirmation is requested</string>
    <string name="pref_summary_input_history_limit">Number of sent lines to remember</string>
    <string name="pref_summary_notifications_on">Notifications are enabled</string>
    <string name="pref_summary_notifications_off">Notifications are disabled</string>
    <string name="pref_summary_customize_text">Customize the text style for various items</string>
    <string name="pref_summary_gallery_visible">Hides the chat screen tabs</string>
    <string name="pref_summary_send_button">"Hides the chat screen's Send button"</string>
    <string name="pref_summary_keep_screen_on">Keeps the screen on while chatting</string>
    <string name="server_details_title">Server Details</string>
    <string name="user_details_title">User Details</string>
    <string name="other_details_title">Other Details</string>
    <string name="serv_name">Name</string>
    <string name="serv_address">Address</string>
    <string name="serv_port">Port</string>
    <string name="serv_ssl">SSL</string>
    <string name="serv_nick_1">Nick 1</string>
    <string name="serv_nick_2">Nick 2</string>
    <string name="serv_nick_3">Nick 3</string>
    <string name="serv_username">Username</string>
    <string name="serv_real_name">Real Name</string>
    <string name="serv_autojoin">Autojoin List</string>
    <string name="autojoin_hint">\#chan1,#chan2</string>
    <string name="serv_autorun">Autorun List</string>
    <string name="serv_autorun_hint">(1 command per line)</string>
    <string name="serv_encoding">Encoding</string>
    <string name="serv_authentication">Authentication</string>
    <string name="serv_logs">Chat Logs</string>
    <string name="serv_turn_on_logs">Enable chat logs</string>
    <string name="serv_setup_auth">Set up…</string>
    <string name="auth_server_password_title">Use server password</string>
    <string name="auth_server_password_hint">Password</string>
    <string name="auth_nickserv_title">Authenticate with NickServ</string>
    <string name="auth_nickserv_hint">NickServ Password</string>
    <string name="auth_sasl_title">Authenticate using SASL</string>
    <string name="auth_sasl_username_hint">SASL Username</string>
    <string name="auth_sasl_password_hint">SASL Password</string>
    <string name="wizard_enter_defaults_advice">"Values below will be used as defaults for all new server profiles.
If you want to change these later, look in Settings > Server Settings"</string>
    <string name="wizard_required_settings">Required Settings</string>
    <string name="wizard_optional_values_msg">Optional Settings</string>
    <string name="wiz_nick_1">Nick 1</string>
    <string name="wiz_1st_nick_hint">Default 1st Nick</string>
    <string name="wiz_nick_2">Nick 2</string>
    <string name="wiz_2nd_nick_hint">Default 2nd Nick</string>
    <string name="wiz_nick_3">Nick 3</string>
    <string name="wiz_3rd_nick_hint">Default 3rd Nick</string>
    <string name="wiz_username">Username</string>
    <string name="wiz_username_hint">Default Username</string>
    <string name="wiz_real_name">Real Name</string>
    <string name="wiz_realname_hint">Default Realname</string>
    <string name="wiz_encoding">Encoding</string>
    <string name="wiz_default_encoding">UTF-8</string>
    <string name="wiz_enable_logs">Enable Logs</string>
</resources>