<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/pref_title_use_notifications" android:key="@string/pref_show_notif" android:defaultValue="true" android:summaryOn="@string/pref_summary_notifications_on" android:summaryOff="@string/pref_summary_notifications_off" />
    <EditTextPreference android:title="@string/pref_title_extra_hilight" android:key="@string/pref_extra_hilight" android:summary="@string/pref_summary_extra_hilight" android:dependency="@string/pref_show_notif" android:inputType="text" />
    <net.andchat.donate.View.MultiChoicePreference android:entries="@array/notification_events" android:title="@string/pref_title_filter_notifications" android:key="@string/pref_notif_for" android:summary="@string/pref_summary_filter_notifications" android:dependency="@string/pref_show_notif" android:defaultValue="@string/default_notification_events" android:entryValues="@array/notification_events_values" />
    <CheckBoxPreference android:title="@string/pref_title_notif_sound" android:key="@string/pref_notif_play_sound" android:summary="@string/pref_summary_notif_sound" android:dependency="@string/pref_show_notif" android:defaultValue="true" />
    <net.andchat.donate.View.MultiChoicePreference android:entries="@array/notification_events" android:title="@string/pref_title_sound_events" android:key="@string/pref_notif_sound_for" android:summary="@string/pref_summary_sound_events" android:dependency="@string/pref_notif_play_sound" android:defaultValue="@string/all_notification_events" android:entryValues="@array/notification_events_values" />
    <RingtonePreference android:title="@string/pref_title_sound_tone" android:key="@string/pref_notif_sound" android:summary="@string/pref_summary_sound_tone" android:dependency="@string/pref_notif_play_sound" android:ringtoneType="notification" android:showDefault="true" android:showSilent="false" />
    <CheckBoxPreference android:title="@string/pref_title_notif_vibrate" android:key="@string/pref_notif_vibrate" android:summary="@string/pref_summary_notif_vibrate" android:dependency="@string/pref_show_notif" android:defaultValue="true" />
    <net.andchat.donate.View.MultiChoicePreference android:entries="@array/notification_events" android:title="@string/pref_title_vibrate_events" android:key="@string/pref_notif_vibrate_for" android:summary="@string/pref_summary_vibrate_events" android:dependency="@string/pref_notif_vibrate" android:defaultValue="@string/all_notification_events" android:entryValues="@array/notification_events_values" />
</PreferenceScreen>