<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TableLayout android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:stretchColumns="1">
            <TextView android:textSize="15.0sp" android:id="@id/instructions" android:text="@string/wizard_enter_defaults_advice" style="@style/SetUpInstructions" />
            <TextView android:text="@string/wizard_required_settings" style="@style/TextViewSeparator" />
            <TableRow>
                <TextView android:text="@string/wiz_nick_1" style="@style/LabelText" />
                <EditText android:id="@id/nick1" android:hint="@string/wiz_1st_nick_hint" style="@style/InputField" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/wiz_nick_2" style="@style/LabelText" />
                <EditText android:id="@id/nick2" android:hint="@string/wiz_2nd_nick_hint" style="@style/InputField" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/wiz_nick_3" style="@style/LabelText" />
                <EditText android:id="@id/nick3" android:hint="@string/wiz_3rd_nick_hint" style="@style/InputField" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/wiz_username" style="@style/LabelText" />
                <EditText android:id="@id/username" android:hint="@string/wiz_username_hint" style="@style/InputField" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/wiz_real_name" style="@style/LabelText" />
                <EditText android:id="@id/realname" android:layout_marginBottom="5.0dip" android:hint="@string/wiz_realname_hint" style="@style/InputField" />
            </TableRow>
            <TextView android:text="@string/wizard_optional_values_msg" style="@style/TextViewSeparator" />
            <TableRow>
                <TextView android:text="@string/wiz_encoding" style="@style/LabelText" />
                <Button android:id="@id/encoding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wiz_default_encoding" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/wiz_enable_logs" style="@style/LabelText" />
                <CheckBox android:id="@id/logmessages" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>
    </ScrollView>
    <include layout="@layout/step_activity_buttons" />
</LinearLayout>